[gd_scene load_steps=9 format=2]

[ext_resource path="res://Juego/UI/HUD/contenedor_informacion.png" type="Texture" id=1]
[ext_resource path="res://Juego/UI/Fonts/Kenney Future.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Juego/UI/HUD/ContenedorInformacion.gd" type="Script" id=3]

[sub_resource type="Animation" id=2]
resource_name = "mostrar"
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "mostrar_suavizado"
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.5, 1.501 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "ocultar"
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "ocultar_suavizado"
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="DynamicFont" id=1]
size = 30
outline_size = 4
font_data = ExtResource( 2 )

[node name="ContenedorInformacion" type="NinePatchRect" groups=["contenedor_info"]]
margin_left = 12.0
margin_top = 12.0
margin_right = 349.0
margin_bottom = 150.0
texture = ExtResource( 1 )
patch_margin_left = 13
patch_margin_top = 13
patch_margin_right = 13
patch_margin_bottom = 13
script = ExtResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "ocultar"
anims/mostrar = SubResource( 2 )
anims/mostrar_suavizado = SubResource( 3 )
anims/ocultar = SubResource( 4 )
anims/ocultar_suavizado = SubResource( 5 )

[node name="Label" type="Label" parent="."]
margin_top = 1.0
margin_right = 337.0
margin_bottom = 139.0
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "Text"
align = 1
valign = 1
autowrap = true

[node name="AutoOcultarTimer" type="Timer" parent="."]
one_shot = true

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="timeout" from="AutoOcultarTimer" to="." method="_on_AutoOcultarTimer_timeout"]
